--- a/client/src/components/views/NavBar/Sections/Navbar.scss
+++ b/client/src/components/views/NavBar/Sections/Navbar.scss
@@ -3,10 +3,14 @@
   justify-content: space-between;
   border-bottom: 1px #999 solid;
 
+  .menu_logo {
+    color: blue;
+    margin-right: 4rem;
+  }
+
   .text_link {
-    font-weight: bold;
     position: relative;
-    color: skyblue;
+    color: rgba(0, 0, 0, 0.5);
     transition: all ease 0.3s;
 
     &:before {
@@ -14,8 +18,8 @@
       position: absolute;
       bottom: 0;
       left: 0;
-      width: 0;
-      height: 2px;
+      width: 100%;
+      height: 0;
       transition: all ease 0.3s;
       background: blue;
     }
@@ -23,7 +27,7 @@
       color: blue;
 
       &:before {
-        width: 100%;
+        height: 2px;
       }
     }
   }
