--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Jua&display=swap");
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Jua", sans-serif;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
 button {
   padding: 0.5rem 0;
   border: none;
