--- a/client/src/components/TopBar/Sections/topbar.module.scss
+++ b/client/src/components/TopBar/Sections/topbar.module.scss
@@ -12,6 +12,11 @@
   }
 
   .nav_btn {
+    background: none;
+    cursor: pointer;
+  }
+
+  .nav_menu {
     position: relative;
     margin: 12px 20px 12px 0;
     padding: 6px 10px;
