--- a/client/src/pages/TodoPage/TodoPage.module.scss
+++ b/client/src/pages/TodoPage/TodoPage.module.scss
@@ -1,7 +1,18 @@
-@import "../../styles/common.scss";
+@mixin btn {
+  cursor: pointer;
+  border: none;
+  border-radius: 10px;
+  padding: 5px 10px;
+  background: #333;
+  color: #fff;
 
-.container {
-  .getChar_form_box {
+  &:hover {
+    background: #000;
+  }
+}
+
+#container {
+  .search_form {
     position: absolute;
     top: 30px;
     left: 50%;
@@ -13,14 +24,59 @@
       border-bottom: 2px solid #000;
       padding: 5px 10px;
     }
-
-    .submit_btn {
+    .btn_submit {
+      @include btn;
       margin-left: 10px;
-      border: none;
-      border-radius: 10px;
-      padding: 5px 10px;
-      background: #333;
-      color: #fff;
+    }
+  }
+  .info_container {
+    margin-top: 80px;
+    display: flex;
+    flex-wrap: wrap;
+
+    .info_box {
+      cursor: pointer;
+      margin-right: 28px;
+      margin-bottom: 20px;
+      padding: 10px;
+      background: #1f222a;
+      width: 180px;
+      height: 90px;
+
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
+
+      &:hover {
+        transform: scale(1.1);
+      }
+
+      img {
+        box-sizing: content-box;
+        border-radius: 20px;
+        border: 2px solid #000;
+        width: 40px;
+        height: 40px;
+      }
+      .class_name {
+        padding-left: 10px;
+        color: #fff;
+        font-size: 12px;
+      }
+      .character_name {
+        margin-top: 10px;
+        text-align: right;
+        display: block;
+        color: #fff;
+        font-weight: bold;
+        font-size: 14px;
+      }
+    }
+    .btn_submit {
+      position: absolute;
+      right: 25px;
+      bottom: 25px;
+      @include btn;
     }
   }
 }
