--- a/client/src/components/TopBar/Sections/topbar.module.scss
+++ b/client/src/components/TopBar/Sections/topbar.module.scss
@@ -1,30 +1,32 @@
 @import "../../../styles/common.scss";
 
+@mixin nav__link {
+  cursor: pointer;
+  position: relative;
+  margin: 12px 20px 12px 0;
+  padding: 6px 10px;
+  color: #fff;
+  font-size: 17px;
+  border-radius: 7px;
+  transition: all ease 0.3s;
+}
+
 .header {
   padding: 0 40px;
   background-color: $color-main;
   display: flex;
   justify-content: space-between;
 
-  .header_left,
-  .header_right {
+  &__nav {
     display: flex;
   }
 
-  .nav_btn {
-    background: none;
-    cursor: pointer;
-  }
+  &__nav__link {
+    @include nav__link;
 
-  .nav_menu {
-    position: relative;
-    margin: 12px 20px 12px 0;
-    padding: 6px 10px;
-    color: #fff;
-    font-size: 17px;
-    border-radius: 7px;
-    transition: all ease 0.3s;
-
+    &--background-none {
+      background: none;
+    }
     &:hover {
       background-color: $color-sub;
     }
