--- a/client/src/pages/RegisterPage/RegisterPage.module.scss
+++ b/client/src/pages/RegisterPage/RegisterPage.module.scss
@@ -27,11 +27,11 @@
     text-align: center;
   }
 
-  .form_box {
+  .register-form {
     display: flex;
     flex-direction: column;
 
-    .input_box {
+    &__input-box {
       position: relative;
       margin-top: 3.5rem;
       box-sizing: border-box;
@@ -39,36 +39,7 @@
       border-bottom: 2px solid rgba(0, 0, 0, 0.3);
       border-radius: 5px;
 
-      .input_txt {
-        position: absolute;
-        bottom: 0.5rem;
-        left: 0.3rem;
-        font-size: 1rem;
-        font-weight: bold;
-        color: rgba(0, 0, 0, 0.3);
-        transition: all ease 0.3s;
-        pointer-events: none;
-      }
-
-      &:focus-within .input_txt,
-      .focus_out {
-        top: -0.4rem;
-        left: 0.2rem;
-        font-size: 0.8rem;
-        color: $color-main;
-      }
-
-      .input_field {
-        border: none;
-        width: 85%;
-        padding: 1rem 0 0.5rem 0.3rem;
-
-        &:focus {
-          outline: none;
-        }
-      }
-
-      .icon {
+      &__icon {
         position: absolute;
         top: 50%;
         right: 0.8rem;
@@ -78,12 +49,41 @@
         }
 
         &.checked {
-          color: green;
+          color: blueviolet;
         }
       }
     }
 
-    .req_msg {
+    &__text {
+      position: absolute;
+      bottom: 0.5rem;
+      left: 0.3rem;
+      font-size: 1rem;
+      font-weight: bold;
+      color: rgba(0, 0, 0, 0.3);
+      transition: all ease 0.3s;
+      pointer-events: none;
+
+      &:focus-within .register-form__text,
+      &--focus-out {
+        top: -0.4rem;
+        left: 0.2rem;
+        font-size: 0.8rem;
+        color: $color-main;
+      }
+    }
+
+    &__input-field {
+      border: none;
+      width: 85%;
+      padding: 1rem 0 0.5rem 0.3rem;
+
+      &:focus {
+        outline: none;
+      }
+    }
+
+    &__req-msg {
       position: absolute;
       bottom: -1.5rem;
       left: 0;
@@ -91,16 +91,16 @@
       width: 21rem;
       font-size: 0.8rem;
 
-      &.success {
+      &--success {
         color: green;
       }
 
-      &.false {
+      &--false {
         color: red;
       }
     }
 
-    .checkEmail_button {
+    &__check-email-btn {
       padding: 10px 0;
       position: absolute;
       top: 50%;
@@ -111,7 +111,7 @@
       @include btn-disabled($color-main, #d3d3d3);
     }
 
-    .button_submit {
+    &__submit-button {
       padding: 8px 5px;
       margin: 3.5rem auto;
       width: 60%;
