--- a/client/src/pages/TodoPage/TodoPage.module.scss
+++ b/client/src/pages/TodoPage/TodoPage.module.scss
@@ -12,29 +12,29 @@
 }
 
 #container {
-  .search_form {
+  .search-form {
     position: absolute;
     top: 30px;
     left: 50%;
     transform: translateX(-50%);
 
-    .input_box {
+    &__input {
       text-align: center;
       border: none;
       border-bottom: 2px solid #000;
       padding: 5px 10px;
     }
-    .btn_submit {
+    &__submit-btn {
       @include btn;
       margin-left: 10px;
     }
   }
-  .info_container {
+  .info-box {
     margin-top: 80px;
     display: flex;
     flex-wrap: wrap;
 
-    .info_box {
+    .info-content {
       cursor: pointer;
       margin-right: 28px;
       margin-bottom: 20px;
@@ -51,19 +51,19 @@
         transform: scale(1.1);
       }
 
-      img {
+      &__class-img {
         box-sizing: content-box;
         border-radius: 20px;
         border: 2px solid #000;
         width: 40px;
         height: 40px;
       }
-      .class_name {
+      &__class-name {
         padding-left: 10px;
         color: #fff;
         font-size: 12px;
       }
-      .character_name {
+      &__char-name {
         margin-top: 10px;
         text-align: right;
         display: block;
@@ -72,7 +72,7 @@
         font-size: 14px;
       }
     }
-    .btn_submit {
+    &__submit-btn {
       position: absolute;
       right: 25px;
       bottom: 25px;
