--- a/client/src/pages/TodoPage/TodoPage.module.scss
+++ b/client/src/pages/TodoPage/TodoPage.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/common.scss";
+
 @mixin btn {
   cursor: pointer;
   border: none;
@@ -12,6 +14,13 @@
 }
 
 #container {
+  .lds-spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
   .search-form {
     position: absolute;
     top: 30px;
@@ -28,6 +37,15 @@
       @include btn;
       margin-left: 10px;
     }
+  }
+  .standby-text {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 40px;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.1);
   }
   .info-box {
     margin-top: 80px;
