--- a/client/src/components/CustomPopup/CustomPopup.module.scss
+++ b/client/src/components/CustomPopup/CustomPopup.module.scss
@@ -1,5 +1,18 @@
 @import "../../styles/common.scss";
 
+@mixin btn {
+  cursor: pointer;
+  border: none;
+  border-radius: 10px;
+  padding: 5px 10px;
+  background: #333;
+  color: #fff;
+
+  &:hover {
+    background: #000;
+  }
+}
+
 .overlay {
   visibility: hidden;
   opacity: 0;
@@ -18,7 +31,7 @@
     background: #fff;
     border-radius: 5px;
     width: 638px;
-    height: 60%;
+    height: 65%;
     position: relative;
     transition: all 5s ease-in-out;
 
@@ -34,6 +47,117 @@
       &:hover {
         cursor: pointer;
         color: #000;
+      }
+    }
+
+    .lds-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .search-form {
+      position: absolute;
+      top: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+
+      &__input {
+        text-align: center;
+        border: none;
+        border-bottom: 2px solid #000;
+        padding: 5px 10px;
+      }
+      &__submit-btn {
+        @include btn;
+        margin-left: 10px;
+      }
+    }
+    .standby-text {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 40px;
+      font-weight: bold;
+      color: rgba(0, 0, 0, 0.1);
+    }
+    .info-box {
+      margin-top: 80px;
+      display: flex;
+      flex-wrap: wrap;
+
+      .info-content {
+        position: relative;
+        cursor: pointer;
+        border: green 3px solid;
+        margin-right: 28px;
+        margin-bottom: 20px;
+        padding: 10px;
+        background: $color-main;
+        width: 180px;
+        height: 90px;
+        transition: all ease 0.2s;
+
+        &:nth-child(3n) {
+          margin-right: 0;
+        }
+
+        &__class-img {
+          width: 40px;
+          height: 40px;
+        }
+        &__class-name {
+          padding-left: 10px;
+          color: #fff;
+          font-size: 13px;
+        }
+        &__char-name {
+          margin-top: 10px;
+          text-align: right;
+          display: block;
+          color: #fff;
+          font-weight: bold;
+          font-size: 14px;
+        }
+        &__checked-icon {
+          border-radius: 10px;
+          border: 0.5px solid green;
+          background: $color-main;
+          position: absolute;
+          top: 0px;
+          right: 0px;
+          color: #fff;
+          transform: scale(2);
+        }
+      }
+      &__chosen-char-list {
+        position: absolute;
+        bottom: 65px;
+        display: flex;
+      }
+      &__chosen-char-item {
+        position: relative;
+        cursor: pointer;
+        padding: 7px;
+        margin-right: 10px;
+        background: $color-sub;
+        font-size: 12px;
+
+        &:nth-child(1) {
+          background: rgba(68, 150, 47, 0.4);
+        }
+
+        &:hover {
+          opacity: 0.7;
+        }
+      }
+      &__submit-btn {
+        position: absolute;
+        right: 25px;
+        bottom: 25px;
+        @include btn;
       }
     }
   }
