--- a/client/src/components/SideBar/SideBar.module.scss
+++ b/client/src/components/SideBar/SideBar.module.scss
@@ -14,7 +14,7 @@
   overflow-x: hidden;
   width: 0;
   padding-top: 50px;
-  background-color: rgb(250, 250, 250);
+  border-right: #e6e6e6 1px solid;
   transition: ease 0.2s;
 
   .snb_list {
