--- a/client/src/pages/TodoPage/TodoPage.module.scss
+++ b/client/src/pages/TodoPage/TodoPage.module.scss
@@ -1,2 +1,71 @@
-#container {
+@import "../../styles/common.scss";
+
+.container {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 50px;
+  height: 100%;
+  background: rgb(250, 250, 250);
+  .get-data-btn {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    z-index: 1;
+    padding: 8px 15px;
+    border-radius: 10px;
+    background: $color-main;
+    color: #fff;
+  }
+  .standby {
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%);
+    font-size: 20px;
+  }
+
+  .todo-contents {
+    width: 500px;
+    height: 300px;
+    border-radius: 15px 15px 0 0;
+    background: #fff;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    &__title {
+      display: block;
+      padding: 15px;
+      border-radius: 18px 18px 0 0;
+      background: $color-title;
+      font-size: 17px;
+      color: #fff;
+      text-align: center;
+    }
+  }
+
+  .today-content {
+  }
+  .week-content {
+  }
+  .region-content {
+    &__list {
+      padding: 10px;
+    }
+    &__item {
+      padding: 7.5px;
+      border-bottom: 1px solid #999;
+      color: #666;
+      &:last-child {
+        border: none;
+      }
+      &__name {
+        display: inline-block;
+        width: 150px;
+        text-align: center;
+        font-size: 14px;
+      }
+    }
+  }
+  .custom-todo-content {
+  }
 }
