--- a/client/src/styles/common.scss
+++ b/client/src/styles/common.scss
@@ -84,6 +84,7 @@
 
 $color-main: #4e944f;
 $color-sub: rgba(132, 194, 116, 0.3);
+$color-title: #86b884;
 
 //importing fontawesome styling files
 @import "../assets/scss/fontawesome.scss";
