--- a/client/src/pages/LoginPage/LoginPage.module.scss
+++ b/client/src/pages/LoginPage/LoginPage.module.scss
@@ -1,1 +1,137 @@
-@import "../RegisterPage/RegisterPage.module";
+@import "../../styles/common.scss";
+
+@mixin btn-disabled($abledBackground, $disabledBackground, $color: #fff) {
+  color: $color;
+  background: $abledBackground;
+  cursor: pointer;
+
+  &:disabled {
+    background: $disabledBackground;
+    cursor: default;
+  }
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  background: rgba(0, 0, 0, 0.7);
+  .container {
+    border: 5px solid $color-main;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    background: rgb(250, 250, 250);
+    transform: translate(-50%, -50%);
+    padding: 50px;
+    width: 500px;
+    height: 70%;
+
+    h1 {
+      display: block;
+      font-size: 40px;
+      color: $color-main;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    .login-form {
+      display: flex;
+      flex-direction: column;
+
+      &__input-box {
+        position: relative;
+        margin: 3.5rem auto 0 auto;
+        box-sizing: border-box;
+        width: 200px;
+        border: none;
+        border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+        border-radius: 5px;
+
+        &__icon {
+          position: absolute;
+          top: 50%;
+          right: 0.8rem;
+          transform: translateY(-50%) scale(1.2);
+          &.unchecked {
+            color: red;
+          }
+
+          &.checked {
+            color: blueviolet;
+          }
+        }
+      }
+
+      &__text {
+        position: absolute;
+        bottom: 0.5rem;
+        left: 0.3rem;
+        font-size: 1rem;
+        font-weight: bold;
+        color: rgba(0, 0, 0, 0.3);
+        transition: all ease 0.3s;
+        pointer-events: none;
+
+        &:focus-within .register-form__text,
+        &--focus-out {
+          top: -0.4rem;
+          left: 0.2rem;
+          font-size: 0.8rem;
+          color: $color-main;
+        }
+      }
+
+      &__input-field {
+        border: none;
+        width: 85%;
+        padding: 1rem 0 0.5rem 0.3rem;
+        font-size: 17px;
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      &__req-msg {
+        position: absolute;
+        bottom: -1.5rem;
+        left: 0;
+        margin-top: 0.5rem;
+        width: 21rem;
+        font-size: 0.8rem;
+
+        &--success {
+          color: green;
+        }
+
+        &--false {
+          color: red;
+        }
+      }
+
+      &__submit-button {
+        padding: 8px 5px;
+        margin: 5rem auto 3rem auto;
+        width: 50%;
+        font-size: 1.2rem;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        @include btn-disabled($color-main, #d3d3d3);
+      }
+    }
+    .link-btn {
+      display: block;
+      padding: 5px;
+      text-align: center;
+      color: #555;
+      font-size: 15px;
+      &:hover {
+        color: #000;
+        font-weight: bold;
+        text-decoration: underline;
+      }
+    }
+  }
+}
