--- a/client/src/pages/RegionPage/RegionPage.module.scss
+++ b/client/src/pages/RegionPage/RegionPage.module.scss
@@ -10,13 +10,13 @@
     background: $color-main;
   }
 }
+
 .container {
   position: relative;
-  padding: 20px 25px;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
+  padding: 40px;
   height: 100%;
   background: rgb(250, 250, 250);
 
@@ -32,32 +32,5 @@
       font-size: 14px;
       color: #fff;
     }
-  }
-
-  .today-content {
-  }
-  .week-content {
-  }
-  .region-content {
-    &__list {
-    }
-    &__item {
-      padding: 10px;
-      color: #696969;
-      &:nth-child(2n) {
-        background: #f6f6f6;
-      }
-      &:last-child {
-        border: none;
-      }
-      &__name {
-        display: inline-block;
-        width: 150px;
-        text-align: center;
-        font-size: 14px;
-      }
-    }
-  }
-  .custom-todo-content {
   }
 }
