--- a/client/src/pages/MainPage/MainPage.module.scss
+++ b/client/src/pages/MainPage/MainPage.module.scss
@@ -39,11 +39,16 @@
   .week-content {
   }
   .region-content {
-    &__list {
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.15);
     }
+
     &__item {
-      padding: 10px;
+      display: flex;
       color: #696969;
+      padding: 12px;
       &:nth-child(2n) {
         background: #f6f6f6;
       }
@@ -55,6 +60,39 @@
         width: 150px;
         text-align: center;
         font-size: 14px;
+      }
+
+      &__name--font-bold {
+        display: inline-block;
+        width: 150px;
+        text-align: center;
+        font-size: 14px;
+        font-weight: bold;
+        text-decoration: line-through;
+      }
+      &__raid-list {
+        display: flex;
+        width: 100%;
+      }
+      &__raid-item {
+        border-left: 1px solid #e6e6e6;
+        flex-basis: 33.33%;
+        font-size: 14px;
+        text-align: center;
+
+        &--font-bold {
+          border-left: 1px solid #e6e6e6;
+          flex-basis: 33.33%;
+          text-align: center;
+          font-size: 14px;
+          font-weight: bold;
+          text-decoration: line-through;
+        }
+        &__region-name {
+          margin-right: 10px;
+        }
+        &__region-clear {
+        }
       }
     }
   }
