feat: weekly expedition todo

--- a/client/src/pages/RegionPage/RegionPage.module.scss
+++ b/client/src/pages/RegionPage/RegionPage.module.scss
@@ -57,6 +57,7 @@
     }
 
     &__text--font-bold {
+      display: block;
       margin-top: 40px;
       font-size: 18px;
       text-decoration: line-through;
