--- a/client/src/pages/WeekPage/WeekPage.module.scss
+++ b/client/src/pages/WeekPage/WeekPage.module.scss
@@ -12,6 +12,15 @@
   }
 }
 
+@mixin table-cell() {
+  width: 200px;
+  padding: 25px 5px;
+  border: 0.5px solid #e6e6e6;
+  text-align: center;
+  font-weight: normal;
+  font-size: 14px;
+}
+
 .lds-spinner {
   display: block;
   margin: 0 auto;
@@ -43,6 +52,14 @@
       background: $color-title;
       font-size: 14px;
       color: #fff;
+    }
+
+    &__table-header {
+      @include table-cell();
+    }
+
+    &__table-cell {
+      @include table-cell();
     }
   }
 
