feat: add / remove weekly character todo

--- a/client/src/pages/WeekPage/WeekPage.module.scss
+++ b/client/src/pages/WeekPage/WeekPage.module.scss
@@ -74,6 +74,15 @@
       }
     }
 
+    &__table-cell--disabled {
+      cursor: pointer;
+      background: rgba(0, 0, 0, 0.15);
+
+      &:hover {
+        background: rgba(0, 0, 0, 0.1);
+      }
+    }
+
     &__rm-btn {
       cursor: pointer;
       position: absolute;
