--- a/client/src/pages/MainPage/MainPage.module.scss
+++ b/client/src/pages/MainPage/MainPage.module.scss
@@ -14,23 +14,25 @@
   position: relative;
   padding: 20px 25px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  flex-flow: wrap;
   align-items: center;
+  justify-content: center;
   height: 100%;
   background: rgb(250, 250, 250);
 
   .todo-contents {
+    font-size: 14px;
     cursor: pointer;
 
-    &:hover {
-      transform: scale(1.15);
-    }
-
     width: 550px;
-    height: 300px;
+    height: 276px;
     background: #fff;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+
     &__title {
       display: block;
       padding: 13px;
@@ -38,17 +40,11 @@
       font-size: 14px;
       color: #fff;
     }
-  }
 
-  .today-content {
-  }
-  .week-content {
-  }
-  .region-content {
     &__item {
       display: flex;
       color: #696969;
-      padding: 12px;
+      padding: 11px;
       &:nth-child(2n) {
         background: #f6f6f6;
       }
@@ -59,14 +55,110 @@
         display: inline-block;
         width: 150px;
         text-align: center;
-        font-size: 14px;
       }
 
       &__name--font-bold {
         display: inline-block;
         width: 150px;
         text-align: center;
-        font-size: 14px;
+        font-weight: bold;
+        text-decoration: line-through;
+      }
+      &__todo-list {
+        display: flex;
+        width: 100%;
+      }
+    }
+  }
+
+  .today-content {
+  }
+  .week-content {
+    width: 1150px;
+    height: 330px;
+    margin-top: 30px;
+
+    &-wrap {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &__todo-list {
+      width: 800px;
+      display: flex;
+    }
+
+    &__todo-item {
+      width: 100px;
+      font-size: 14px;
+      text-align: center;
+
+      &:first-child {
+        width: 150px;
+      }
+    }
+    &__clear-list {
+      display: flex;
+    }
+
+    &__clear-item {
+      width: 100px;
+
+      &__check-icon {
+        width: 100px;
+        color: #000;
+      }
+
+      &__xmark-icon {
+        width: 100px;
+        opacity: 0.3;
+      }
+    }
+
+    &__clear-item--disabled {
+      width: 100px;
+      text-align: center;
+    }
+
+    &__exp-list {
+      display: flex;
+      flex-wrap: wrap;
+      align-content: flex-start;
+      width: 400px;
+      background: #f6f6f6;
+    }
+
+    &__exp-item {
+      border: 1px solid #e6e6e6;
+      display: flex;
+      flex-direction: column;
+      flex-basis: 50%;
+      justify-content: center;
+      height: 60px;
+      background: #fff;
+      text-align: center;
+
+      &__todo-name--clear {
+        font-weight: bold;
+        text-decoration: line-through;
+      }
+      &__todo-clear {
+      }
+    }
+  }
+  .region-content {
+    margin-left: 30px;
+    &__item {
+      &__name {
+        display: inline-block;
+        width: 150px;
+        text-align: center;
+      }
+
+      &__name--font-bold {
+        display: inline-block;
+        width: 150px;
+        text-align: center;
         font-weight: bold;
         text-decoration: line-through;
       }
@@ -77,14 +169,12 @@
       &__raid-item {
         border-left: 1px solid #e6e6e6;
         flex-basis: 33.33%;
-        font-size: 14px;
         text-align: center;
 
         &--font-bold {
           border-left: 1px solid #e6e6e6;
           flex-basis: 33.33%;
           text-align: center;
-          font-size: 14px;
           font-weight: bold;
           text-decoration: line-through;
         }
