--- a/client/src/pages/Todaypage/TodayPage.module.scss
+++ b/client/src/pages/Todaypage/TodayPage.module.scss
@@ -15,8 +15,163 @@
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
-  height: 100%;
+  justify-content: center;
+  gap: 40px;
+  padding: 40px;
+  height: calc(100vh - 58.4px);
   background: rgb(250, 250, 250);
+
+  .todo-contents {
+    background: #fff;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+    &__title {
+      display: block;
+      padding: 13px;
+      background: $color-title;
+      font-size: 14px;
+      color: #fff;
+    }
+  }
+
+  .today-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+
+    .today-box {
+      position: relative;
+      width: 350px;
+      height: 300px;
+
+      &__contents-box {
+        position: relative;
+        padding: 20px;
+        &__overlay {
+          pointer-events: none;
+          position: absolute;
+          top: 0;
+          left: 0;
+          background: #999;
+          opacity: 0.2;
+          z-index: 1;
+          width: 100%;
+          height: 100%;
+        }
+
+        &__input {
+          position: absolute;
+          top: -1px;
+          width: 70px;
+          background: #999;
+          text-align: center;
+          color: #fff;
+          border: 1px solid #000;
+
+          &:focus::placeholder {
+            color: transparent;
+          }
+
+          &::placeholder {
+            color: #fff;
+          }
+        }
+      }
+
+      &__guardian-box {
+        position: relative;
+        height: 130px;
+
+        &__name {
+          display: inline-block;
+          font-weight: bold;
+          margin-bottom: 8px;
+        }
+
+        .rest-gauge {
+          &-number {
+            position: absolute;
+            top: -6px;
+            right: 41px;
+          }
+          &-input {
+            right: 41px;
+          }
+        }
+      }
+
+      &__chaosDungeon-box {
+        padding-top: 45px;
+        width: 100%;
+        height: 130px;
+
+        .rest-gauge {
+          left: 120px;
+          &-number {
+            position: absolute;
+            top: -5px;
+            left: -79px;
+          }
+          &-input {
+            left: -79px;
+          }
+        }
+
+        .today-box__clear-btn {
+          right: 20px;
+        }
+      }
+
+      .rest-gauge {
+        z-index: 0;
+        position: relative;
+        display: flex;
+        margin-bottom: 10px;
+        .active {
+          background: #e9efc0;
+          border: 1px solid #fff;
+
+          &:nth-child(2n) {
+            border-left: 1px solid #e9efc0;
+            border-right: 2px solid #fff;
+          }
+        }
+
+        .inactive {
+          background: rgba(99, 99, 99, 0.3);
+          border: 1px solid #fff;
+        }
+
+        .gauge-box {
+          width: 20px;
+          height: 17px;
+          margin-left: -1px;
+        }
+
+        &-number {
+          position: absolute;
+          padding: 5px;
+          font-size: 14px;
+        }
+      }
+
+      &__clear-btn {
+        position: absolute;
+        cursor: pointer;
+        background: none;
+        border: 2px solid $color-main;
+        border-radius: 10px;
+        padding: 5px 10px;
+
+        &:hover {
+          background: $color-sub;
+        }
+      }
+    }
+  }
+  .switch {
+    position: absolute;
+    right: 120px;
+  }
 }
