--- a/client/src/styles/common.scss
+++ b/client/src/styles/common.scss
@@ -115,3 +115,25 @@ $color-title: #86b884;
     }
   }
 }
+
+@mixin item-box($padding, $border-property) {
+  position: relative;
+  padding: $padding;
+  cursor: pointer;
+  #{$border-property}: 1px solid #e6e6e6;
+  text-align: center;
+
+  &:hover {
+    background: $color-sub;
+  }
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
